--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ping-pong
+  name: your-app
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: ping-pong
+      app: your-app
   template:
     metadata:
       labels:
-        app: ping-pong
+        app: your-app
     spec:
       containers:
-        - name: test
-          image: purema4/pinball:latest  # Docker Hub image reference
+        - name: your-app-container
+          image: dockerhubusername/imagename:tag  # Docker Hub image reference
           ports:
-            - containerPort: 8080
+            - containerPort: 3000
